--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -1,3 +1,4 @@
 browser=chrome
 url=https://www.charly.education/
 landingPageTitle=Das 100% kostenlose Lerntool für Studierende | charly.education
+accountPageTitle=Accounts
