Validation of welcome message

--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -2,3 +2,4 @@ browser=chrome
 url=https://www.charly.education/
 landingPageTitle=Das 100% kostenlose Lerntool für Studierende | charly.education
 accountPageTitle=Accounts
+accountPageWelcome=Hallo!
