Login tests for some scenarios

--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -3,3 +3,5 @@ url=https://www.charly.education/
 landingPageTitle=Das 100% kostenlose Lerntool für Studierende | charly.education
 accountPageTitle=Accounts
 accountPageWelcome=Hallo!
+email=6317@berlin-htw.de
+password=Pluspeter
