--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                     <version>3.0.0-M3</version>
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>testng.xml</suiteXmlFile>
+                            <suiteXmlFile>CharlieLogin.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
                 </plugin>
