Validation of profile page/cockpit

--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -5,3 +5,5 @@ accountPageTitle=Accounts
 accountPageWelcome=Hallo!
 email=6317@berlin-htw.de
 password=Pluspeter
+loginUrl=https://beta.pluspeter.com/learnview?welcome
+profileTitle=Charly.education
